# Pravik_builder

./: package-lock.json  package.json
voice-server/: .gitignore  Dockerfile  package-lock.json  package.json  pyproject.toml  tsconfig.json
voice-server/scripts/: test_pipeline_startup.py  test_sms.py
voice-server/src/: config.py  events.py  index.ts  main.py  pipeline.py  tools.py  tools.ts
voice-server/src/agents/: builder-bridge.ts  conversation.ts  greeter.ts  types.ts  voice-orchestrator.ts
voice-server/src/pipeline/: __init__.py  builder.py  llm_config.py  recording.py  transport.py
voice-server/src/prompts/: __init__.py  layers.py
voice-server/src/services/: audio_recorder.py  builder_api.py  call-session.ts  call_session.py  circuit_breaker.py  noise_analyzer.py  realtime.py  realtime.ts  retry.py  supabase.ts  twilio.ts  (+4 more)
voice-server/tests/: conftest.py  test_api_resilience.py  test_audio_recorder.py  test_auto_answerable.py  test_broadcast_resilience.py  test_builder_api.py  test_call_identity.py  test_call_session.py  test_call_state.py  test_circuit_breaker.py  test_clean_project_name.py  test_error_patterns.py  test_event_queue.py  test_event_sync.py  test_events_contract.py  test_noise_analyzer.py  test_pipeline_builder.py  test_pipeline_llm_config.py  test_pipeline_prompts.py  test_pipeline_transport.py  test_prompt_layers.py  test_prompt_phase_transitions.py  test_realtime_broadcasts.py  test_retry_backoff.py  test_supabase_retry.py  test_tool_context.py  test_tool_handlers.py  test_tool_registry.py  test_tool_schemas.py  test_turn_context.py
(+204 files in other folders)
